force-app/main/default/objects/Finding__c/Finding__c.object-meta.xml
<CustomObject>
    <description>A finding raised during an Audit Case. Captures policy violations, documentation gaps, process deficiencies, or fair-lending concerns discovered during post-approval review. Tracks remediation through to closure.</description>
    <label>Finding</label>
    <nameField>
        <displayFormat>FN-{0000}</displayFormat>
        <label>Finding Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Findings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>