force-app/main/default/objects/Finding__c/fields/AI_Draft_Accepted__c.field-meta.xml
<CustomField>
    <fullName>AI_Draft_Accepted__c</fullName>
    <label>AI Draft Accepted</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>Whether auditor accepted AI draft without edits (SM-C2 counter-metric)</description>
</CustomField>