force-app/main/default/objects/Finding__c/fields/AI_Drafted__c.field-meta.xml
<CustomField>
    <fullName>AI_Drafted__c</fullName>
    <label>AI Drafted</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>Whether Agentforce drafted the description</description>
</CustomField>