force-app/main/default/objects/Finding__c/fields/Audit_Case__c.field-meta.xml
<CustomField>
    <fullName>Audit_Case__c</fullName>
    <label>Audit Case</label>
    <type>Lookup</type>
    <referenceTo>Audit_Case__c</referenceTo>
    <relationshipName>Findings</relationshipName>
    <relationshipLabel>Findings</relationshipLabel>
    <required>true</required>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Parent audit case</description>
</CustomField>