force-app/main/default/objects/Finding__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <description>Finding category</description>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Income</fullName><default>false</default><label>Income</label></value>
            <value><fullName>Credit</fullName><default>false</default><label>Credit</label></value>
            <value><fullName>Collateral</fullName><default>false</default><label>Collateral</label></value>
            <value><fullName>Employment</fullName><default>false</default><label>Employment</label></value>
            <value><fullName>Documentation</fullName><default>false</default><label>Documentation</label></value>
            <value><fullName>Other</fullName><default>false</default><label>Other</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>