force-app/main/default/objects/Finding__c/fields/Closed_Reason__c.field-meta.xml
<CustomField>
    <fullName>Closed_Reason__c</fullName>
    <label>Closed Reason</label>
    <type>Text</type>
    <length>255</length>
    <description>Why the finding was closed</description>
</CustomField>