force-app/main/default/objects/Finding__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Description</label>
    <type>LongTextArea</type>
    <length>32000</length>
    <description>Finding description (free text or AI-drafted)</description>
</CustomField>