force-app/main/default/objects/Finding__c/fields/Exception_Approver__c.field-meta.xml
<CustomField>
    <fullName>Exception_Approver__c</fullName>
    <label>Exception Approver</label>
    <type>Text</type>
    <length>255</length>
    <description>Who approved the exception at origination</description>
</CustomField>