force-app/main/default/objects/Finding__c/fields/Exception_Reason__c.field-meta.xml
<CustomField>
    <fullName>Exception_Reason__c</fullName>
    <label>Exception Reason</label>
    <type>LongTextArea</type>
    <length>32000</length>
    <description>Documented reason for exception</description>
</CustomField>