force-app/main/default/objects/Finding__c/fields/Rationale__c.field-meta.xml
<CustomField>
    <fullName>Rationale__c</fullName>
    <description>Detailed explanation supporting the finding.</description>
    <inlineHelpText>Provide the reasoning and evidence that supports this finding.</inlineHelpText>
    <label>Rationale</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>