force-app/main/default/objects/Finding__c/fields/Remediation_Due_At__c.field-meta.xml
<CustomField>
    <fullName>Remediation_Due_At__c</fullName>
    <description>Deadline for completing remediation of this finding.</description>
    <inlineHelpText>The date and time by which remediation must be completed.</inlineHelpText>
    <label>Remediation Due At</label>
    <type>DateTime</type>
</CustomField>