force-app/main/default/objects/Finding__c/fields/Remediation_Notes__c.field-meta.xml
<CustomField>
    <fullName>Remediation_Notes__c</fullName>
    <label>Remediation Notes</label>
    <type>LongTextArea</type>
    <length>32000</length>
    <description>Recommended remediation</description>
</CustomField>