force-app/main/default/objects/Finding__c/fields/Remediation_Owner__c.field-meta.xml
<CustomField>
    <fullName>Remediation_Owner__c</fullName>
    <label>Remediation Owner</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipName>Owned_Remediations</relationshipName>
    <relationshipLabel>Owned Remediations</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Person responsible for remediation</description>
</CustomField>