force-app/main/default/objects/Finding__c/fields/Replay_Check__c.field-meta.xml
<CustomField>
    <fullName>Replay_Check__c</fullName>
    <label>Replay Check</label>
    <type>Lookup</type>
    <referenceTo>Replay_Check__c</referenceTo>
    <relationshipName>Findings</relationshipName>
    <relationshipLabel>Findings</relationshipLabel>
    <description>Source replay check (null for manual findings)</description>
</CustomField>