force-app/main/default/objects/Finding__c/fields/Severity__c.field-meta.xml
<CustomField>
    <fullName>Severity__c</fullName>
    <label>Severity</label>
    <type>Picklist</type>
    <required>true</required>
    <description>Auditor judgment</description>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Pass</fullName><default>false</default><label>Pass</label></value>
            <value><fullName>Exception</fullName><default>false</default><label>Exception</label></value>
            <value><fullName>Violation</fullName><default>false</default><label>Violation</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>